fix: resolve CORS conflicts